--- a/blog/2024-12-22-positron/index.qmd
+++ b/blog/2024-12-22-positron/index.qmd
@@ -9,7 +9,7 @@ navbar: false
 editor: source
 categories: 
   - r2py
-image: "test.jpg"
+image: "positron_1.jpg"
 knitr:
   opts_chunk: 
     echo: true
