--- a/blog/2021-04-15-rcpp-and-research/index.qmd
+++ b/blog/2021-04-15-rcpp-and-research/index.qmd
@@ -7,6 +7,7 @@ categories:
 description: "A post describing why I decided to use Rcpp for my research."
 summary: "A post describing why I decided to use Rcpp for my research."
 draft: false
+navbar: false
 image: "BL3.jpg"
 freeze: true
 ---
