--- a/blog/2021-04-20-incorporating-rcpp/index.qmd
+++ b/blog/2021-04-20-incorporating-rcpp/index.qmd
@@ -4,6 +4,7 @@ description: "Documenting my experience implementing RcppArmadillo to my researc
 summary: "Documenting my experience implementing RcppArmadillo to my research."
 author: "Isaac Quintanilla"
 draft: false
+navbar: false
 date: 2021-05-01
 image: "BB2.jpg"
 categories: 
