--- a/cv/cv.qmd
+++ b/cv/cv.qmd
@@ -23,19 +23,16 @@ format:
 
 <!-- TITLE -->
 
-```{=tex}
 \begin{huge}\begin{center}{\bf Isaac Noe Quintanilla Salinas}\end{center}\end{huge}
-```
+
 <!-- CONTACT INFO -->
 
-```{=tex}
 \begin{center}isaac.qs@csuci.edu ∙ \href{https://www.inqs.info}{inqs.info} 
 \end{center}
 \vspace{15pt}
-```
+
 <!-- EDUCATION: 1ST BULLET -->
 
-```{=tex}
 \begin{large}
   {\bf Education}
   \vspace{3pt}
@@ -51,13 +48,12 @@ format:
   \end{multicols}
   \vspace{-0.25cm}
 \end{large}
-```
+
 -   Dissertation: Multilevel Time-Varying Joint Models for Longitudinal and Survival Outcomes
 -   Advisor: Dr. Esra Kürüm
 
 <!-- EDUCATION: 2ND BULLET -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf San Diego State University}\end{flushleft}
@@ -70,12 +66,11 @@ format:
   \end{multicols}
   \vspace{-0.25cm}
 \end{large}
-```
+
 -   Capstone: Patient-Physician Communication and Infleunza Vaccine Uptake
 
 <!-- EDUCATION: 3rd Bullet -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf California State University Monterey Bay}\end{flushleft}
@@ -90,12 +85,11 @@ format:
   \textit{Minor in Mathematics}
   \vspace{-0.25cm}
 \end{large}
-```
+
 -   Capstone: Phylogenic and Biochemical Analysis of novel *Acidovorax* Species isolated using Diazinon enrichment culture.
 
 <!-- Professional Appointments -->
 
-```{=tex}
 \begin{large}{\bf Professional Appointments}
   \vspace{3pt}
   \hrule
@@ -114,12 +108,11 @@ format:
   \vspace{-0.25cm}
 \end{large}
 \vspace{3pt}
-```
+
 <!-- EXPERIENCE : 1ST BULLET-->
 
 \vspace{3pt}
 
-```{=tex}
 \begin{large}{\bf Experience}
   \vspace{3pt}
   \hrule
@@ -137,14 +130,13 @@ format:
 
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Developed a novel statistical model to capture the time-dynamic association between longitudinal and survival outcomes.
 
 \vspace{4pt}
 
 <!-- EXPERIENCE : 2ND BULLET -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Research Internship}}\end{flushleft}
@@ -161,12 +153,11 @@ format:
 
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Evaluating the relationship between religiosity and participation barriers and benefits to cancer clinical trials among Hispanic Americans. We used different psychometrics to measure religiosity and participation in cancer clinical trials. We used basic correlation to measure the association. \vspace{4pt}
 
 <!-- EXPERIENCE : 2ND BULLET -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Internship}}\end{flushleft}
@@ -183,12 +174,11 @@ format:
 
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Evaluating the relationship between certain demographics and antibiotic usage behaviors among shigellosis cases in the California-Mexico Border Regions. I created basic descriptive statistics and bivariate statistics to test the association between characteristics. I created a visual graphs to guide the analysis such as displaying the antibiotic duration by patient. \vspace{4pt}
 
 <!-- EXPERIENCE : 2ND BULLET -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Summer Internship}}\end{flushleft}
@@ -205,14 +195,13 @@ format:
 
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Performed a spatial analysis on the geographic distribution on vaccine exemption rates among kindergarten students in Los Angeles County. Conducted a literature review to learn more about different spatial statistics, vaccine-preventable-diseases, and personal belief exemptions.
 
 \vspace{4pt}
 
 <!-- EXPERIENCE : 2ND BULLET -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Internship}}\end{flushleft}
@@ -229,14 +218,13 @@ format:
 
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Project Fresh Air is an intervention study to see how the behaviors of participants change once knowing the air quality in their homes. I helped with day to day tasks from collecting both biological samples to creating visual charts in R while learning about intervention studies.
 
 \vspace{4pt}
 
 <!-- EXPERIENCE : 3RD BULLET -->
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Summer Research Internships}}\end{flushleft}
@@ -251,14 +239,13 @@ format:
   \textit{Project: Donor Age and Mortality after Lung Transplantation Study}
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Analyzed the effects of lung donor age and post-lung transplant mortality.
 -   Developed proportional hazard models and survival curves to evaluate the relationship between donor age and mortality.
 -   Research was published in the American Journal of Transplantation.
 
 \vspace{3pt}
 
-```{=tex}
 \begin{large}{\bf Teaching, Mentoring, and Tutoring}
   \vspace{3pt}
   \hrule
@@ -274,7 +261,7 @@ format:
 
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   MATH 201: Elementary Statistics
 -   MATH 352: Probability and Statistics
 -   MATH 398: Advance Research Investigation
@@ -283,7 +270,6 @@ format:
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Associate Instructor}}\end{flushleft}
@@ -297,13 +283,12 @@ format:
   \end{multicols}
   \vspace{-0.25cm}
 \end{large}
-```
+
 -   STAT 127: Introduction to Quality Management
 -   STAT 147: Introduction to Statistical Computing
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Teaching Assistant}}\end{flushleft}
@@ -317,14 +302,13 @@ format:
   \end{multicols}
   \vspace{-0.25cm}
 \end{large}
-```
+
 -   STAT 048: Introduction to Business Statistics
 -   STAT 100: Introduction to Statistics
 -   STAT 170: Regression and ANOVA
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Creator, Coordinator, and Mentor}}\end{flushleft}
@@ -340,12 +324,11 @@ format:
   \textit{SMART Program}
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Developed, coordinated and mentored for the Statistical Mentoring in Applied, Research, and Technology (SMART) Program. Developed a mentoring program for undergraduate students to be mentored by graduate students for a quarter. Coordinated the pilot program in Spring 2021. Mentored an undergraduate student in developing an R package to teach advanced statistical techniques.
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Instructor}}\end{flushleft}
@@ -361,7 +344,7 @@ format:
   \textit{Upward Bound}
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Summer 2020: Taught Public Health and Geometry to underserved High School students from UC Riverside's Upward Bound Program. My responsibilities were to deliver instructions in a virtual setting. An R package was developed to teach public health concepts and programming simultaneously.
 
 -   Summer 2019: Taught Statistics and Data Analysis to underserved High School students from UC Riverside's Upward Bound Program. I was responsible in developing both the Statistics and Data Analysis course to teach students how to work with data. Students learned how to analyzed different types of data and how to program in R.
@@ -372,7 +355,6 @@ format:
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Mentor/Instructor}}\end{flushleft}
@@ -388,12 +370,11 @@ format:
   \textit{Summer Science Enrichment Program}
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   Mentored students to conduct literature reviews, write manuscripts, and analyze data. In addition, I worked with my colleagues to develop a course in statistics. The course focused on teaching the basics of statistics which included descriptive statistics, statistical tests, and regression.
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Tutor}}\end{flushleft}
@@ -407,7 +388,7 @@ format:
   \end{multicols}
   \vspace{-0.25cm}
 \end{large}
-```
+
 -   Department of Mathematics and Statistics: Math Tutor
 -   Academic Skills Achievement Program: Science (Chemistry) Tutor
 
@@ -415,7 +396,6 @@ format:
 
 <!-- Publications -->
 
-```{=tex}
 \begin{large}
   {\bf Publications}
   \vspace{3pt}
@@ -426,126 +406,112 @@ format:
   {\bf In-Review}
   \vspace{3pt}
 \end{normalsize}
-```
--   Magdaleno, Francisco, **Salinas INQ**, and Rothstein, Stephen. Vocal Functional Flexibility in a Non-Primate Vocal Learning Species. *Journal of Language Evolution.* **In Press.**
-
--   Hawkins LR, Magdaleno F, **Salinas INQ**, and Peer BD. Egg shape in an obligate brood parasite contributes to decreased temperature variation during incubation. *Current Zoology.*
 
 <!-- -   Krisha Algoso, Selene Lopez, Barbara Reque, Leniha Lagarde, Natalie Leon, Gabriella Amador, **Isaac Quintanilla Salinas,** Ashley McCarley, and Caryl Ann Becerra. Antibacterial Potential of Native Medicinal Chumash Plants on *Bacillus subtilis*, *Escherichia coli*, and *Pseudomonas fluorescens*. Microorganisms -->
 
 -   Azer, Lilian; **Salinas, Isaac**; Kürüm, Esra; Ferguson, Leah; Davis, Elizabeth; Zhang, Weiwei; Strickland-Hughes, Carla; Wu, Rachel. Subjective Executive Functioning and Skill Learning during the COVID-19 Pandemic Associated with Perceived Loneliness, Depressive Symptoms, and Well-being. *The International Journal of Aging and Human Development.*
 
-```{=tex}
 \begin{normalsize}
   {\bf Peer-Reviewed Journals}
   \vspace{3pt}
 \end{normalsize}
-```
--   Juarez BH, **Quintanilla-Salinas I**, Lacey MP, O'Connell A. (2024) Water Availability and Temperature as Modifiers of Evaporative Water Loss in Tropical Frogs. *Integrative and Comparative Biology.* doi.org/10.1093/icb/icae057
 
--   Flores A., Parker Cappiello L., **Quintanilla Salinas I**. (2023) Challenges and successes of emergency online teaching in statistics courses. *Journal of Statistics and Data Science Education.* doi.org/10.1080/26939169.2023.2231036
+-   Magdaleno, Francisco, **Salinas INQ**, and Rothstein, Stephen. (2024) Vocal Functional Flexibility in a Non-Primate Vocal Learning Species. *Journal of Language Evolution***.** [doi.org/10.1093/jole/lzae006](https://doi.org/10.1093/jole/lzae006)
 
--   Gill AS, Perez L, **Salinas INQ**, Byers SR, Liu Y, Hickey BL, Zhong W, Hooley RJ. Selective Array-based Sensing of Anabolic Steroids in Aqueous Solution by Host: Guest Reporter Complexes. *Chemistry*. 2019. 25(7):1740-1745. doi: 10.1002/chem.201804854
+-   Hawkins LR, Magdaleno F, **Salinas INQ**, and Peer BD. Egg shape in an obligate brood parasite contributes to decreased temperature variation during incubation. *Current Zoology.* [doi.org/10.1093/cz/zoae070](https://doi.org/10.1093/cz/zoae070)
 
--   Bellettiere J, Chuang E, Hughes SC, **Quintanilla I**, Hofstetter CR, Hovell MF. Association Between Parental Barriers to Accessing a Usual Source of Care and Children's Receipt of Preventative Services. *Public Health Reports*. 2017. 132(3):316-325. doi:10.1177/0033354917699831
+-   Juarez BH, **Quintanilla-Salinas I**, Lacey MP, O'Connell A. (2024) Water Availability and Temperature as Modifiers of Evaporative Water Loss in Tropical Frogs. *Integrative and Comparative Biology.* [doi.org/10.1093/icb/icae057](https://doi.org/10.1093/icb/icae057)
 
--   Pretanvil JA, **Salinas IQ**, Piccioni DE. Glioblastoma in elderly: treatment patterns and survival. *CNS Oncology*. 2016. 6(1):19-28. doi: 10.2217/cns-2016-0023.
+-   Flores A., Parker Cappiello L., **Quintanilla Salinas I**. (2023) Challenges and successes of emergency online teaching in statistics courses. *Journal of Statistics and Data Science Education.* [doi.org/10.1080/26939169.2023.2231036](https://doi.org/10.1080/26939169.2023.2231036)
 
--   Baldwin MR, Peterson E, Easthausen I, **Quintanilla I**, Colago E, Sonett JR, D'Ovidio F, Bacchetta M, Costa J, Diamond J, Christie JD, Arcasoy SM, Lederer DJ. Donor age and early graft failure after lung transplantation: a cohort study. *Am J Transplant*. 2013. 13(10):2685-95. Epub 2013/08/26. DOI: 10.1111/ajt.12428.
+-   Gill AS, Perez L, **Salinas INQ**, Byers SR, Liu Y, Hickey BL, Zhong W, Hooley RJ. Selective Array-based Sensing of Anabolic Steroids in Aqueous Solution by Host: Guest Reporter Complexes. *Chemistry*. 2019. 25(7):1740-1745. [doi: 10.1002/chem.201804854](https://doi.org/10.1002/chem.201804854)
+
+-   Bellettiere J, Chuang E, Hughes SC, **Quintanilla I**, Hofstetter CR, Hovell MF. Association Between Parental Barriers to Accessing a Usual Source of Care and Children's Receipt of Preventative Services. *Public Health Reports*. 2017. 132(3):316-325. [doi.org/10.1177/0033354917699831](https://doi.org/10.1177/0033354917699831)
+
+-   Pretanvil JA, **Salinas IQ**, Piccioni DE. Glioblastoma in elderly: treatment patterns and survival. *CNS Oncology*. 2016. 6(1):19-28. [doi.org/10.2217/cns-2016-0023](https://doi.org/10.2217/cns-2016-0023).
+
+-   Baldwin MR, Peterson E, Easthausen I, **Quintanilla I**, Colago E, Sonett JR, D'Ovidio F, Bacchetta M, Costa J, Diamond J, Christie JD, Arcasoy SM, Lederer DJ. Donor age and early graft failure after lung transplantation: a cohort study. *Am J Transplant*. 2013. 13(10):2685-95. Epub 2013/08/26. [doi.org/10.1111/ajt.12428](https://doi.org/10.1111/ajt.12428).
 
 \newpage
 
-```{=tex}
 \begin{normalsize}
   {\bf Reports}
   \vspace{3pt}
 \end{normalsize}
-```
+
 -   Santibáñez M, Yoon S, Britton J, **Quintanilla I**, Dowling SH, Noregia A, Fernandez A. Border Health Epidemiology Report 2015. California Department of Public Health Office of Binational and Border Health. 2016.
 
 -   Santibáñez M, Yoon S, **Quintanilla I**, Ta T, Fernandez A. Border Health Status Report 2012-2014. California Department of Public Health Office of Binational and Border Health. 2015.
 
-```{=tex}
 \begin{normalsize}
   {\bf Posters}
   \vspace{3pt}
 \end{normalsize}
-```
+
 -   **Quintanilla, I**. (2016). Geographic Distribution of Vaccine Personal Belief Exemptions in San Diego County. Poster presented at San Diego County Epidemiology Exchange. San Diego, CA.
 
 -   Reuter C., **Quintanilla I**., Bellettiere J., Berardi V., Robusto K., Hughes S., Hovell M. (2015). The Effect of Prompts to Increase Stair Use Among Escalator Users. Poster presented at SDSU Student Research Symposium. San Diego, CA.
 
 -   **Quintanilla Salinas I**, Munoz Brittany, Anastasia Steph, Haffa A. (2013). Phylogenetic and Biochemical Analysis of novel Acidovorax Species isolated using Diazinon enrichment culture. Poster presented at CSUMB Capstone Festival. Seaside, CA.
 
-```{=tex}
 \begin{large}
   {\bf Presentations}
   \vspace{4pt}
   \hrule
 \end{large}
-```
-```{=tex}
 \begin{large}
     \textbf{Overview of Joint Longitudinal-Survival Models: Modeling the Association Between Dependent Outcomes\newline Presenter: Isaac Quintanilla}
     \textit{\newline National Institute of Statistical Sciences \newline Virtual \newline June 2021}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
     \textbf{Geographic Distribution of Vaccine Personal Belief Exemption in San Diego County.\newline Presenter: Isaac Quintanilla}
     \textit{\newline San Diego County Epidemiology Exchange \newline San Diego, CA \newline 2016}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{3pt}
 
-```{=tex}
 \begin{large}
     \textbf{Vaccination Exemptions among School Children in Los Angeles County\newline Presenter: Isaac Quintanilla}
     \textit{\newline Public Health Scholar Presentations \newline Los Angeles, CA \newline 2014}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{3pt}
 
-```{=tex}
 \begin{large}
     \textbf{Phylogenetic and Biochemical Analysis of a Novel Acidovorax Species Isolated Using Diazinon Enrichment Culture \newline Presenter: Isaac Quintanilla}
     \textit{\newline SEP Capstone Spring 2013 Capstone Festival \newline Seaside, CA \newline 2013}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{3pt}
 
-```{=tex}
 \begin{large}
     \textbf{Phylogenetic and Biochemical Analysis of a Novel Acidovorax Species Isolated Using Diazinon Enrichment Culture \newline Presenter: Isaac Quintanilla and Brittany Munoz}
     \textit{\newline Tri-Beta Pacific District Convention \newline Azusa, CA \newline 2013}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{3pt}
 
-```{=tex}
 \begin{large}
     \textbf{Donor Age and Mortality after Lung Transplantation: A Cohort Study \newline Presenters: Isaac Quintanilla and Imaani Easthausen}
     \textit{\newline BEST Research Symposium \newline New York, NY \newline 2012}
 \end{large}
 \vspace{-0.16cm}
-```
+
 <!-- Educational Programs -->
 
-```{=tex}
 \begin{large}
   {\bf Educational Programs}
   \vspace{3pt}
   \hrule
 \end{large}
-```
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {CSU AGEP}}\end{flushleft}
@@ -561,10 +527,9 @@ format:
     \textit{California State Polytechnic University Pomona}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Embedded Peer Educator Collaboration}}\end{flushleft}
@@ -580,10 +545,9 @@ format:
     \textit{California State University Channel Islands}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Communiy-Based Research}}\end{flushleft}
@@ -599,10 +563,9 @@ format:
     \textit{California State University Channel Islands}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Minority Training Program in}}\end{flushleft}
@@ -618,10 +581,9 @@ format:
     \textit{Univerity of California, Los Angeles \newline Fielding School of Public Health}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Public Health Scholars Program}}\end{flushleft}
@@ -637,10 +599,9 @@ format:
     \textit{Department of Public Health}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf {Biostatistics Enrichment Summer Training}}\end{flushleft}
@@ -656,10 +617,9 @@ format:
   \textit{Columbia University Medical Center \newline Mailman School of Public Health \newline Department of Biostatistics}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}
   \begin{multicols}{2}
     \begin{flushleft}{\bf{Summer Medical and Dental}}\end{flushleft}
@@ -675,16 +635,15 @@ format:
   \textit{Columbia University Medical Center \newline College of Physicians and Surgeons}
 \end{large}
 \vspace{-0.16cm}
-```
+
 \vspace{4pt}
 
-```{=tex}
 \begin{large}{\bf Committees}
   \vspace{3pt}
   \hrule
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   *Faculty at Large*: Chicana/o and Latina/o Faculty and Staff Association
 -   2024-2025
 -   *Co-Chair*: CSUCI Data Science Program Development Task Force
@@ -692,13 +651,12 @@ format:
 
 \vspace{4pt}
 
-```{=tex}
 \begin{large}{\bf Grants and Awards}
   \vspace{3pt}
   \hrule
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   2024-2025: CSUCI Research, Scholarly, and Creative Activities Grant
 -   2023-2027: California Educational Learning Lab Grant - Building a Critical Mass for Data Science
 -   2023-2024: CSUCI Research, Scholarly, and Creative Activities Grant
@@ -711,13 +669,12 @@ format:
 
 <!-- SKILLS -->
 
-```{=tex}
 \begin{large}{\bf SKILLS}
   \vspace{3pt}
   \hrule
 \end{large}
 \vspace{-0.16cm}
-```
+
 -   **Languages:** R, Stan, Markdown, SAS, LaTeX, and C++
 
 -   **Tools:** Bash, Git, SPSS, and ArcGIS
