--- a/books/02-Small-Teaching/index.qmd
+++ b/books/02-Small-Teaching/index.qmd
@@ -20,5 +20,5 @@ James Lang
 
 Physical Copy Available from the Broome Library: [Link](https://csu-ci.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma999866865102903&context=L&vid=01CALS_UCI:JSBL&lang=en&search_scope=MyInst_and_CI&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,small%20teaching&offset=0)
 
-[Amazon Link](https://www.amazon.com/Small-Teaching-Everyday-Lessons-Learning/dp/1119755549/ref=pd_lpo_sccl_1/134-5912753-3439629?pd_rd_w=YtcPV&content-id=amzn1.sym.116f529c-aa4d-4763-b2b6-4d614ec7dc00&pf_rd_p=116f529c-aa4d-4763-b2b6-4d614ec7dc00&pf_rd_r=GRDQ75XXRHMPGQ619RQA&pd_rd_wg=qbsaZ&pd_rd_r=800b7b8b-71cc-4a4f-9cde-08551025786d&pd_rd_i=1119755549&psc=1)
+[Bookshop Link](https://bookshop.org/p/books/small-teaching-everyday-lessons-from-the-science-of-learning-james-m-lang/15980776?ean=9781119755548&next=t)
 :::
