--- a/books/06-Happiness/index.qmd
+++ b/books/06-Happiness/index.qmd
@@ -16,5 +16,5 @@ Matthieu Ricard
 ::: {.callout-note icon="false"}
 ## Book Availability
 
-[Amazon Link](https://www.amazon.com/Happiness-Guide-Developing-Lifes-Important/dp/0316167258)
+[Bookshop Link](https://bookshop.org/p/books/happiness-a-guide-to-developing-life-s-most-important-skill-matthieu-ricard/110035?ean=9780316167253&next=t)
 :::
