--- a/books/08-Limitless-Mind/index.qmd
+++ b/books/08-Limitless-Mind/index.qmd
@@ -14,5 +14,5 @@ Jo Boaler
 
 #### Book Availability
 
-[Amazon Link](https://www.amazon.com/Limitless-Mind-Learn-Without-Barriers/dp/0062851756/ref=asc_df_0062851756/?tag=hyprod-20&linkCode=df0&hvadid=533302342524&hvpos=&hvnetw=g&hvrand=5134133906699977934&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9031618&hvtargid=pla-1363183397265&psc=1)
+[Bookshop Link](https://bookshop.org/p/books/limitless-mind-jo-boaler/16912268?ean=9780062851758&next=t)
 :::
