--- a/books/09-Solito/index.qmd
+++ b/books/09-Solito/index.qmd
@@ -14,5 +14,5 @@ Javier Zamora
 
 #### Book Availability
 
-[Amazon Link](https://www.amazon.com/Solito-Memoir-Javier-Zamora/dp/0593498062)
+[Bookshop Link](https://bookshop.org/p/books/solito-a-memoir-javier-zamora/17806482?ean=9780593498088&next=t)
 :::
