--- a/books/11-Inclusive-Teaching/index.qmd
+++ b/books/11-Inclusive-Teaching/index.qmd
@@ -14,5 +14,5 @@ Kelly Hogan and Viji Sathy
 
 #### Book Availability
 
-[Amazon Link](https://www.amazon.com/Inclusive-Teaching-Strategies-Promoting-Classroom/dp/1952271630/ref=sr_1_1?crid=16U5KL1JNK560&dib=eyJ2IjoiMSJ9.F5-xwVnxzVJAmaH_O3FkzObfrq-yXLBYKddSN6zPXM0CHjl9Sjr_mg6WeUpT5TrA8M75uCW6eNdEbC8tMXyxw0AJfzwzc_J2b4nMLLgQTUqmxt8ZC_v4BTPlS1wxqWGDAbkAse3cmlVPX_r9Yl8GZGUIM1VuDIWKJhnOpU4REqYPniRK5esEtFnNdnUPwa-60XFnzYfpeB4UEJ0CjsmS6qsuSIKcRBOcu-IrUnqMuK4.lCiLAwyqpIlLxoGvl9o55Ff7LAUN-_Sx6ugEQ9AvTT0&dib_tag=se&keywords=Inclusive+Teaching&qid=1705913136&s=books&sprefix=inclusive+teaching%2Cstripbooks%2C154&sr=1-1)
+[Bookshop Link](https://bookshop.org/p/books/inclusive-teaching-strategies-for-promoting-equity-in-the-college-classroom-kelly-a-hogan/18414443?ean=9781952271632&next=t)
 :::
