--- a/books/12-Why-Dont-Like-School/index.qmd
+++ b/books/12-Why-Dont-Like-School/index.qmd
@@ -14,5 +14,5 @@ Daniel Willingham
 
 #### Book Availability
 
-[Amazon Link](https://www.amazon.com/Why-Dont-Students-Like-School/dp/1119715660/ref=sr_1_1?crid=TE7L6FNMKP20&dib=eyJ2IjoiMSJ9.sr4CrVEO7XhsEOYELyFBV0qKTpgCKx1xwKvAccRnQX5OsgiXOY_QUVowaYEWUsLcLiCPZpkb2eJweNk7b6AVTTHTkJnvcKOc96Em8o-dlXSgzg2fMYlxZeyqed_4atmggiZGZASR3qPoG5CtDxNoSxDEGSOIHbIkjXd9NYXNq96JL87vAOSjyLz6jzuszTlI1oSt2jP7ID3PCx_6x5kAEVb39Nmf8I42LtiRsi277no.yyO0MtrbirfWHcxi3elf_qpxlyJ6VGtash0R98qtbvA&dib_tag=se&keywords=why+students+don%27t+like+school&qid=1705913176&s=books&sprefix=Why+Students%2Cstripbooks%2C143&sr=1-1)
+[Bookshop Link](https://bookshop.org/p/books/why-don-t-students-like-school-a-cognitive-scientist-answers-questions-about-how-the-mind-works-and-what-it-means-for-the-classroom-daniel-t-willingha/15207650?ean=9781119715665&next=t)
 :::
