--- a/books/13-Peoples-History-Science/index.qmd
+++ b/books/13-Peoples-History-Science/index.qmd
@@ -14,5 +14,5 @@ Clifford Conner
 
 #### Book Availability
 
-[Amazon Link](https://www.amazon.com/Peoples-History-Science-Clifford-Conner/dp/1560257482)
+[Bookshop Link](https://bookshop.org/p/books/a-people-s-history-of-science-miners-midwives-and-low-mechanicks-clifford-d-conner/16437014?ean=9781560257486&next=t)
 :::
