--- a/books/14-The-Fantasy-Economy/index.qmd
+++ b/books/14-The-Fantasy-Economy/index.qmd
@@ -14,5 +14,5 @@ Neil Kraus
 
 #### Book Availability
 
-[Amazon Link](https://www.amazon.com/Fantasy-Economy-Neoliberalism-Inequality-Education/dp/143992371X)
+[Bookshop](https://bookshop.org/p/books/the-fantasy-economy-neoliberalism-inequality-and-the-education-reform-movement-neil-kraus/19942470?ean=9781439923719&next=t)
 :::
