--- a/blog/2024-12-22-positron/positron.qmd
+++ b/blog/2024-12-22-positron/positron.qmd
@@ -1,14 +1,16 @@
 # Positron
 
-Positron and Python are both new to me, but as always, the first step is installing the software on your computer. In this post, I will highlight my adventures installing both of these softwares on to my computer. I will layout what is working and what is not working. 
+Positron and Python are both new to me, but as always, the first step is installing the software on your computer. In this post, I will highlight my adventures installing both of these softwares on to my computer. I will layout what is working and what is not working.
 
 **Disclaimer: I daily drive Linux, currently using Fedora, so my experiences will be different.**
 
 ## Positron
 
-Since I had R installed, my first intuition was to install Positron becuase I learned that was the new ide, *still in beta*, from Posit that will allow users to work in both R and in Python. Therefore, I can learn how to use python without having to worried about choosing a proper IDE. 
+Since I had R installed, my first intuition was to install Positron becuase I learned that was the new ide, *still in beta*, from Posit that will allow users to work in both R and in Python. Therefore, I can learn how to use python without having to worried about choosing a proper IDE.
 
-To install Positron, go to their [website](https://positron.posit.co) and click on [get started](https://positron.posit.co/start.html). Afterwards, follow the instructions to prepare your computer to use positron. This involves either installing R from [CRAN](https://cloud.r-project.org/) or Python via [pyenv](https://github.com/pyenv/pyenv) ([Windows](https://github.com/pyenv-win/pyenv-win)). Once that is done, you can navigate to their download [page](https://positron.posit.co/download.html), where you download the appropriate file^[Lucked out they had Fedora.]. Afterwards, run the installer and follow the prompts. And there you go, Positron should be ready for use.
+To install Positron, go to their [website](https://positron.posit.co) and click on [get started](https://positron.posit.co/start.html). Afterwards, follow the instructions to prepare your computer to use positron. This involves either installing R from [CRAN](https://cloud.r-project.org/) or Python via [pyenv](https://github.com/pyenv/pyenv) ([Windows](https://github.com/pyenv-win/pyenv-win)). Once that is done, you can navigate to their download [page](https://positron.posit.co/download.html), where you download the appropriate file[^1]. Afterwards, run the installer and follow the prompts. And there you go, Positron should be ready for use.
+
+[^1]: Lucked out they had Fedora.
 
 After you install Positron, it should look like this:
 
@@ -18,25 +20,22 @@ Note that I changed the appearance of Positron to dark theme. Here is Positron w
 
 ![](img/Screenshot%20From%202024-12-26%2014-36-00.png){fig-alt="An image displaying the Positron IDE, the interpreter is Python."}
 
-
 ### VS Code
 
 Positron is based on Microsoft's [Code OSS](https://github.com/microsoft/vscode) platform, which makes it look very similar to [visual Studio Code](https://code.visualstudio.com/). It is an [IDE](https://en.wikipedia.org/wiki/Integrated_development_environment) similar to RStudio, but it is program agnostic. Additionally, it is capable to be more customizable with the use of extensions provided by [Open VSX](https://open-vsx.org/); however, you may install extensions from [VS Code](https://marketplace.visualstudio.com/vscode) as well.
 
 To learn more about Positron and VS Code, visit the following pages:
 
-  - [Positron Introduction](https://youtu.be/8uRcB34Hhsw?si=ZbycZdtjZ_cvnOJv)
-  - [Positron Guides](https://positron.posit.co/add-to-path.html)
-  - [R Package Development](https://blog.stephenturner.us/p/r-package-development-in-positron)
-  - [GitHub Discussions](https://github.com/posit-dev/positron/discussions)
-  - [VS Code Help](https://code.visualstudio.com/docs/introvideos/basics)
-  - [VS Code Basics Videos](https://code.visualstudio.com/docs/getstarted/introvideos)
-
+-   [Positron Introduction](https://youtu.be/8uRcB34Hhsw?si=ZbycZdtjZ_cvnOJv)
+-   [Positron Guides](https://positron.posit.co/add-to-path.html)
+-   [R Package Development](https://blog.stephenturner.us/p/r-package-development-in-positron)
+-   [GitHub Discussions](https://github.com/posit-dev/positron/discussions)
+-   [VS Code Help](https://code.visualstudio.com/docs/introvideos/basics)
+-   [VS Code Basics Videos](https://code.visualstudio.com/docs/getstarted/introvideos)
 
 ## Post 1: Data Science Projects
 
-
-In Positron, and VS Code, projects are created as workspaces by associating folders as specialized place called workspaces. These workspaces allow you to organize your projects as necessary, such as creating folders for you scripts, data, source files, and much more. Additionally, you can initialize a git repository for the work space 
+In Positron, and VS Code, projects are created as workspaces by associating folders as specialized place called workspaces. These workspaces allow you to organize your projects as necessary, such as creating folders for you scripts, data, source files, and much more. Additionally, you can initialize a git repository for the work space
 
 It is highly recommended to creat a workspace for any project you work on.
 
@@ -79,6 +78,3 @@ You can install a python module with:
 
 reticulate::py_install("polars")
 ```
-
-
-
