--- a/books/07-Make-it-Stick/index.qmd
+++ b/books/07-Make-it-Stick/index.qmd
@@ -20,5 +20,5 @@ Mark McDaniel
 ::: {.callout-note icon="false"}
 ## Book Availability
 
-[Amazon Link](https://www.amazon.com/Make-Stick-Science-Successful-Learning/dp/0674729013)
+[Bookshop Link](https://bookshop.org/p/books/make-it-stick-the-science-of-successful-learning-peter-c-brown/6724859?ean=9780674729018&next=t)
 :::
